# mcp

mcp_demo/mcp_new/: README.md  client.py  main.py  mathserver.py  pyproject.toml  requirements.txt  weather.py
